# innate

./: .gitignore  .pre-commit-config.py  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.rst  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py  test_string_to_function.py
.github/: pytest.yml
.github/workflows/: docs.yml  pytest.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/introduction/: api.rst  installation.rst
docs/source/tutorials/: 1_load_dataset.ipynb
examples/tutorials/: 0_generate_dataset.py  1_load_dataset.py  2_nn_fitting.py  3_eqn_regression.py  3_nn_fitting.py  4_visual_diagnostics.py
src/innate/: __init__.py  approximation.py  changelog.txt  config.toml  io.py  main.py  plotting.py  string_to_function.py
src/innate/interpolation/: methods.py  pytensor.py
src/innate/regression/: methods.py
src/innate/torch/: siren.py  siren_train_image.py  siren_train_ngrid.py  torch_tools.py
tests/: test_string_to_function.py
