[project]
name = "innate-stable"
version = "0.1.1"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "COPYING"}
authors = [{name = "Vital Fernández", email = "vgf@umich.edu"}]
description = "Interpolator and Neural Network Architecture for TEnsors"

dependencies = ["numpy~=1.24",
                "pandas~=2.0",
                "toml~=0.10",
                "tomli >= 2.0.0 ; python_version < '3.11'"]

classifiers = ["License :: OSI Approved :: MIT License",
               "Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3.7"]

[tool.pytest.ini_options]
pythonpath = ["src"]
mpl-baseline-path = 'tests/baseline'
mpl-results-path = 'tests/outputs'
mpl-results-always = false
