[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "innate-stable"
version = "0.1.8"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "COPYING"}
authors = [{name = "Vital Fernández", email = "vgf@umich.edu"}]
description = "Interpolator and Neural Network Architecture for TEnsors"
dependencies = ["numpy~=1.2",
                "h5py~=3.11",
                "bokeh==2.4.3",
                "h5netcdf~=1.3",
                "tomli >= 2.0.0 ; python_version < '3.11'"]

classifiers = ["License :: OSI Approved :: MIT License",
               "Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3.7"]

[tool.pytest.ini_options]
pythonpath = ["src"]
mpl-baseline-path = 'tests/baseline'
mpl-results-path = 'tests/outputs'
mpl-results-always = false
